fix dark mode

--- a/src/styles/default.css
+++ b/src/styles/default.css
@@ -5,6 +5,7 @@ body {
   font-family: 'Biaodian Pro Serif GB', 'Numeral LF Serif', 'Microsoft Yahei',
     Georgia, 'Times New Roman', 'Han Songti GB', serif;
   line-height: 1.7;
+  background-color: #fff;
 }
 a {
   text-decoration: underline;
@@ -122,10 +123,16 @@ hr {
     background-color: #000;
   }
   body {
-    background-color: #333;
-    color: rgb(184, 184, 184);
+    background-color: #212121;
+    color: #ddd;
   }
   .navigator a::after {
     border: none;
+  }
+  blockquote {
+    color: #999;
+  }
+  blockquote::before {
+    display: none;
   }
 }
